--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,13 +152,13 @@ sup {
 }
 
 a {
-  color: #FFD333;
+  color: #fff  ;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #e6b400;
+  color: #EF7822 ;
   text-decoration: underline;
 }
 
@@ -318,6 +318,8 @@ legend {
     font-size: calc(1.275rem + 0.3vw) ;
   }
 }
+
+
 
 progress {
   vertical-align: baseline;
@@ -619,6 +621,23 @@ pre code {
 @media (min-width: 576px) {
   .container, .container-sm {
     max-width: 540px;
+  }
+  .video {
+    width: 600px;
+    height: 350px;
+  }
+  .bg-mobil {
+    background-color: #EF7822;
+  }
+}
+
+@media (max-width: 575px) {
+  .video {
+    width: 100%;
+    height: 200px;
+  }
+  .bg-mobil {
+    background-color: #044969;
   }
 }
 
@@ -6180,7 +6199,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #EF7822 !important;
+  background-color: #EF7822   !important;
 }
 
 .bg-footer {
@@ -9528,7 +9547,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: #FFD333;
+  color: #111827  ;
 }
 
 @media (max-width: 991.98px) {
