--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5885,7 +5885,7 @@ a.close.disabled {
 
 .carousel-item {
   position: relative;
-  display: none;
+  /* display: none; */
   float: left;
   width: 100%;
   margin-right: -100%;
