--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9774,3 +9774,10 @@ a.text-dark:hover, a.text-dark:focus {
     font-size: 14px;
     color: #EF7822;
   }
+
+.navbar-fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1030; /* para que quede sobre el contenido */
+}
